# funboy

./: .gitignore  Cargo.toml
funboy-cli/: Cargo.toml
funboy-cli/src/: main.rs
funboy-core/: .env  Cargo.toml  fsl_documentation.json
funboy-core/migrations/: 0001_funboy_tables.sql
funboy-core/src/: database.rs  database_old.rs  interpolator.rs  interpreter.rs  lib.rs  ollama.rs  template_database.rs  template_substitutor.rs
funboy-core/src/interpreter/: documentation.rs  lexer.rs  parser.rs
funboy-discord/: Cargo.toml
funboy-discord/src/: commands.rs  components.rs  interpreter.rs  io_format.rs  main.rs  rate_limiter.rs
funboy-discord/src/commands/: ollama.rs  random.rs  sound.rs  templates.rs  utility.rs
funboy-discord/src/io_format/: context_extension.rs  discord_message_format.rs
