[package]
name = "funboy-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
rand = "0.9.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = {version = "1.39.2", features = ["full"]}
ollama-rs = "0.3.2"
reqwest = {version = "0.11", features = ["json"]}
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"]}
regex = "1.12.2"
strum = "0.27.2"
strum_macros = "0.27.2"
